--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- favicon -->
+    <link rel="icon" href="./images/favicon.png" type="image/gif" sizes="16x16">
     <!-- font-family -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900&display=swap" rel="stylesheet">
     <!-- fontawesome -->
