--- a/index.html
+++ b/index.html
@@ -31,29 +31,32 @@
 
     <!-- loader spinner -->
     <div class="preload">
-        <div class="spinner-grow text-primary" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-secondary" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-success" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-danger" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-warning" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-info" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-light" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-dark" role="status">
-            <span class="sr-only">Loading...</span>
+        <div>
+            <p class="text-center text-white d-block">Loading...</p>
+            <div class="spinner-grow text-primary" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-secondary" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-success" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-danger" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-warning" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-info" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-light" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-dark" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
         </div>
     </div>
 
@@ -62,17 +65,17 @@
     <div class="business-contact py-2">
         <div class="container custom-container">
             <div class="row">
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-7">
                     <div class="contact-media">
                         <span class="envelope"><small><i
-                                    class="fas fa-envelope icon"></i>ouremail@gmail.com</small></span>
-                        <span class="phone"><small><i class="fas fa-phone icon"></i> +123 456 7890</small></span>
+                                    class="fas fa-envelope icon"></i>iballi2017@gmail.com</small></span>
+                        <span class="phone"><small><i class="fas fa-phone icon"></i> +234 706 5569 711</small></span>
                         <span class="clock"><small><i class="fas fa-clock icon"></i> Mon - Fri 9am-5pm</small></span>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4 offset-lg-2">
-                    <span class="being-best"><small>We’ve been the best of choices for 23years</small></span
-                        style="float: right">
+                <div class="col-12 col-lg-4 offset-lg-1">
+                    <span class="being-best float-lg-right"><small>We’ve been the best of choices for
+                            23years</small></span style="float: right">
                 </div>
             </div>
         </div>
