--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                         </form>
                     </div>
                     <div class="col-12 col-md-6">
-                        <div class="item" data-aos="fade-left">
+                        <div class="item mt-2" data-aos="fade-left">
                             <div style="overflow:hidden;width: 100%;position: relative;"><iframe width="600"
                                     height="400"
                                     src="https://maps.google.com/maps?hl=en&amp;q=Abule-egba, Lagos+(Abule-egba, Lagos)&amp;ie=UTF8&amp;t=&amp;z=10&amp;iwloc=B&amp;output=embed"
