--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body id="home" data-spy="scroll">
 
     <!-- loader spinner -->
-    <div class="preload">
+    <!-- <div class="preload">
         <div>
             <p class="text-center text-white d-block">Loading...</p>
             <div class="spinner-grow text-primary" role="status">
@@ -59,7 +59,7 @@
                 <span class="sr-only">Loading...</span>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <!-- business contact -->
