--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body id="home" data-spy="scroll">
 
     <!-- loader spinner -->
-    <!-- <div class="preload">
+    <div class="preload">
         <div>
             <p class="text-center text-white d-block">Loading...</p>
             <div class="spinner-grow text-primary" role="status">
@@ -59,7 +59,7 @@
                 <span class="sr-only">Loading...</span>
             </div>
         </div>
-    </div> -->
+    </div>
 
 
     <!-- business contact -->
@@ -150,14 +150,15 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/taylor-grote-UiVe5QvOhao-unsplash 1.png" class="d-block w-100" alt="...">
+                    <!-- <img src="./images/taylor-grote-UiVe5QvOhao-unsplash 1.png" class="d-block w-100" alt="..."> -->
+                    <img src="./images/carousel-slider-3.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block carousel-caption-3 h-100">
                         <div class="caption-inner">
                             <h1 class="display-3 animated fadeInDown slow" style="margin-top: 3em;">First slide label
                             </h1>
                             <h3 class="animated fadeInUp slow">Nulla vitae elit libero, a pharetra.
                             </h3>
-                            <a class="btn hero-button btn-md pt-3 pb-3 shadow mt-3 animated fadeInUpBig slow float-right"
+                            <a class="btn hero-button btn-md pt-3 pb-3 shadow mt-3 animated fadeInUpBig slow float-left"
                                 href="#contact-us">GET FREE
                                 CONSULTATION</a>
                         </div>
