Editing the loading effect

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- custom css -->
     <link rel="stylesheet" href="./css/style.css">
 
-    <title>Busiest Business</title>
+    <title>Busiest</title>
 </head>
 
 <body id="home" data-spy="scroll">
