--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <!-- main navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light main-navbar sticky-top">
-        <div class="container">
+        <div class="container py-3">
             <a class="navbar-brand" href="#">
                 <!-- <h2>Navbar</h2> -->
                 <img src="./images/Nav-brand.png" class="img img-fluid" alt="">
