--- a/index.html
+++ b/index.html
@@ -296,26 +296,30 @@
                     <div class="wrapper">
                         <div class="container-fluid">
                             <div class="row">
-                                <div class="col-12 col-md-6 p-0 item" data-aos="fade-right">
-
-                                    <h5>Why should you work with us ?</h5>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-                                    </p>
-
-                                    <ul>
-                                        <li>
-                                            Trem aperiam, eaque ipsa quae ab illo inventore veritatis et
-                                        </li>
-                                        <li>
-                                            Sed ut perspiciatis unde omnis iste natus error sit
-                                        </li>
-                                        <li>
-                                            Eaque ipsa quae ab illo inventore veritatis et quasi
-                                        </li>
-                                    </ul>
+                                <div class="col-12 col-lg-6 p-0 item" data-aos="fade-right">
+                                    <div class="row">
+                                        <div class="col-12 col-md-6 col-lg-12">
+                                            <h5>Why should you work with us ?</h5>
+                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                                            </p>
+                                        </div>
+                                        <div class="col-12 col-md-6 col-lg-12">
+                                            <ul>
+                                                <li>
+                                                    Trem aperiam, eaque ipsa quae ab illo inventore veritatis et
+                                                </li>
+                                                <li>
+                                                    Sed ut perspiciatis unde omnis iste natus error sit
+                                                </li>
+                                                <li>
+                                                    Eaque ipsa quae ab illo inventore veritatis et quasi
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
                                 </div>
 
-                                <div class="col-12 col-md-6 p-0 item" data-aos="fade-left">
+                                <div class="col-12 col-lg-6 p-0 item" data-aos="fade-left">
                                     <div class="video-container">
                                         <div class="preload-video">
                                             <div class="spinner-grow text-secondary" role="status">
@@ -593,6 +597,47 @@
             <script src="https://unpkg.com/aos@2.3.0/dist/aos.js"></script>
             <!-- custom js -->
             <script src="./js/app.js"></script>
+</body>
+
+</html>
+<li class="list-head">Contact us</li>
+<li><a href="#">Email: ouremail@gmail.com</a></li>
+<li class="phone-number">
+    <div>Call us:</div>
+    <div class="ml-3">
+        <p> +123 456 7890</p>
+        <p> +123 456 7890</p>
+    </div>
+    </span>
+</li>
+<li>Address: 7B, Segun Akinola, Abule-egba Lagos, Nigeria.</li>
+</ul>
+
+</div>
+</footer>
+
+<section class="footer-copyright">
+    <div class="wrapper py-2">
+        <small><i class="far fa-copyright mr-2"></i>2020 Copyright Alli Ibrahim</small>
+    </div>
+</section>
+
+</main>
+
+
+
+<!-- lazy loading -->
+<script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@12.4.0/dist/lazyload.min.js"></script>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!-- section scroll animation library -->
+<script src="https://unpkg.com/aos@2.3.0/dist/aos.js"></script>
+<!-- custom js -->
+<script src="./js/app.js"></script>
 </body>
 
 </html>
